[project]
name = "new-monitor"
version = "0.1.0"
description = "Add your description here"
dependencies = [
    "django>=5.0.6",
    "djangorestframework>=3.15.1",
    "requests>=2.32.3",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/new_monitor"]
