[project]
name = "new-monitor"
version = "0.1.0"
description = "Add your description here"
dependencies = [
    "django>=5.0.6",
    "djangorestframework>=3.15.1",
    "requests>=2.32.3",
    "apscheduler>=3.10.4",
    "django-apscheduler>=0.6.2",
    "python-dotenv>=1.0.1",
    "gunicorn>=22.0.0",
    "python-decouple>=3.8",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/new_monitor"]
